<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".presentation.welcome_screen.WelcomeActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:background="@drawable/ly_fade_black"
        android:rotation="180"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/wv_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ly_rounded_bottom_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpWelcome"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
            android:id="@+id/indicator_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:dotsColor="@color/background_color"
            app:dotsCornerRadius="8dp"
            app:dotsSize="10dp"
            app:dotsSpacing="4dp"
            app:dotsStrokeColor="@color/dark"
            app:dotsStrokeWidth="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/vpWelcome" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:background="@drawable/ly_rounded_bottom_button"
        android:fontFamily="@font/lato_bold"
        android:padding="8dp"
        android:visibility="gone"
        android:text="@string/welcome_button_next_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/wv_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/image_text"
        app:srcCompat="@drawable/welcome_wave"
        app:tint="@color/purple_500" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/welcome_title_text"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/welcome_description_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


</androidx.constraintlayout.widget.ConstraintLayout>