<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail_screen.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            android:background="@color/dark">
            
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="top"
                app:layout_collapseMode="pin"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="330dp"
                app:layout_collapseMode="pin">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background"
                    app:civ_border_color="@color/white"
                    app:civ_border_overlay="true"
                    app:civ_border_width="3dp"
                    app:layout_constraintBottom_toTopOf="@+id/tabs"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follower_value_text"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textColor="@color/dark"
                    android:gravity="center"
                    android:background="@drawable/ly_circle"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                    app:layout_constraintEnd_toStartOf="@+id/iv_avatar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_avatar" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/followers_text"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/tv_follower"
                    app:layout_constraintStart_toStartOf="@+id/tv_follower"
                    app:layout_constraintTop_toBottomOf="@+id/tv_follower" />


                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following_value_text"
                    android:textColor="@color/dark"
                    android:gravity="center"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:background="@drawable/ly_circle"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_avatar"
                    app:layout_constraintTop_toTopOf="@+id/iv_avatar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followings_text"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_following"
                    app:layout_constraintStart_toStartOf="@+id/tv_following"
                    app:layout_constraintTop_toBottomOf="@+id/tv_following" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center"
                    android:text="@string/name_text"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
                    app:layout_constraintStart_toStartOf="@+id/iv_avatar"
                    app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/lato"
                    android:gravity="center"
                    android:text="@string/username_text"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/tabs"
                    app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
                    app:layout_constraintStart_toStartOf="@+id/iv_avatar"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/background_color"
                    android:overScrollMode="never"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tabIndicatorHeight="3dp"
                    app:tabMode="fixed"
                    app:tabRippleColor="@null"
                    app:tabSelectedTextColor="@color/white"
                    app:tabTextAppearance="@style/TabTextAppearance"
                    app:tabTextColor="@android:color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.3"
                    app:layout_constraintTop_toBottomOf="@id/tabs"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@color/shimmer_color" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:src="@drawable/ic_red_favorite"
                android:backgroundTint="@color/white"
                app:borderWidth="0dp"
                app:fabSize="mini"
                android:layout_marginEnd="8dp"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="58dp"
                android:contentDescription="@string/image_text" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_follow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:saveEnabled="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>